@@ -1,3 +1,8 @@
+2000-04-19  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* generic/tclFileName.c (SplitUnixPath): added support for QNX
+	node ids.
+
 2000-04-18  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* README:
